find_package(SSC REQUIRED)
include (${SSC_USE_FILE} )

INCLUDE_DIRECTORIES( 
    .. 
#    ../../DataBus 
#    /usr/lib64/dbus-1.0/include/ 
#    /usr/include/dbus-1.0 
    )
    
LINK_DIRECTORIES( 
#    .. 
#    ../../DataBus 
    )

if (UNIX AND NOT APPLE)

ADD_EXECUTABLE( vectortest vectortest.c )
SET_TARGET_PROPERTIES( vectortest PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( vectortest ${SNW_LINK_LIBS} m tiff )


ADD_EXECUTABLE( testread testread.cpp )
SET_TARGET_PROPERTIES( testread PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS} -g -O0" )
TARGET_LINK_LIBRARIES( testread m DICOMLib tiff )

ADD_EXECUTABLE( dump dump.c )
SET_TARGET_PROPERTIES( dump PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS} -g -O0" )
TARGET_LINK_LIBRARIES( dump m DICOMLib tiff )

ADD_EXECUTABLE( ddump ddump.c )
SET_TARGET_PROPERTIES( ddump PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS} -g -O0" )
TARGET_LINK_LIBRARIES( ddump m DICOMLib tiff )

ADD_EXECUTABLE( singleviewer singleviewer.cpp )
SET_TARGET_PROPERTIES( singleviewer PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( singleviewer GL GLU m DICOMLib X11 Xext m png tiff )

ADD_EXECUTABLE( gl2dviewer gl2dviewer.c )
SET_TARGET_PROPERTIES( gl2dviewer PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( gl2dviewer GL GLU m DICOMLib X11 Xext m png tiff )

ADD_EXECUTABLE( gl3dviewer gl3dviewer.c )
SET_TARGET_PROPERTIES( gl3dviewer PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( gl3dviewer GL GLU m DICOMLib X11 Xext m png tiff )

ADD_EXECUTABLE( glvolumeviewer glvolumeviewer.c )
SET_TARGET_PROPERTIES( glvolumeviewer PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( glvolumeviewer GL GLU m DICOMLib X11 m glut png tiff GLEW )

ADD_EXECUTABLE( glvolumeviewer2 glvolumeviewer2.c )
SET_TARGET_PROPERTIES( glvolumeviewer2 PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( glvolumeviewer2 GL GLU m DICOMLib X11 m glut png tiff GLEW )

ADD_EXECUTABLE( headfun headfun.c )
SET_TARGET_PROPERTIES( headfun PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( headfun GL GLU m DICOMLib X11 m glut png tiff )

ADD_EXECUTABLE( swvolume swvolume.c )
SET_TARGET_PROPERTIES( swvolume PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( swvolume GL GLU m DICOMLib X11 m glut png tiff )

ADD_EXECUTABLE( testnifti testnifti.c )
SET_TARGET_PROPERTIES( testnifti PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( testnifti DICOMLib )

ADD_EXECUTABLE( test1 test1.c )
SET_TARGET_PROPERTIES( test1 PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( test1 DICOMLib  tiff png )

ADD_EXECUTABLE( test2 test2.c )
SET_TARGET_PROPERTIES( test2 PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( test2 DICOMLib  tiff png )

ADD_EXECUTABLE( test3 test3.c )
SET_TARGET_PROPERTIES( test3 PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( test3 DICOMLib  tiff png )

ADD_EXECUTABLE( test5 test5.c )
SET_TARGET_PROPERTIES( test5 PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( test5 DICOMLib  tiff png )

ADD_EXECUTABLE( testexported testexported.c )
SET_TARGET_PROPERTIES( testexported PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( testexported DICOMLib  tiff png )

ADD_EXECUTABLE( convtest convtest.c )
SET_TARGET_PROPERTIES( convtest PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( convtest DICOMLib  tiff png )

ADD_EXECUTABLE( multiframe multiframe.c )
SET_TARGET_PROPERTIES( multiframe PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( multiframe DICOMLib  tiff png )

ADD_EXECUTABLE( pacstest pacstest.c )
SET_TARGET_PROPERTIES( pacstest PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( pacstest DICOMLib  tiff png )

ADD_EXECUTABLE( snw2diff snw2diff.c )
SET_TARGET_PROPERTIES( snw2diff PROPERTIES LINK_FLAGS "${SNW_LINK_FLAGS}" COMPILE_FLAGS "${SNW_TEST_FLAGS}" )
TARGET_LINK_LIBRARIES( snw2diff  tiff )

ADD_TEST( DICOM_test1 test1 )
ADD_TEST( DICOM_test2 test2 )
ADD_TEST( DICOM_test3 test3 )
ADD_TEST( DICOM_export swvolume )
ADD_TEST( DICOM_test4 test5 )
ADD_TEST( DICOM_multiframe multiframe )
ADD_TEST( DICOM_convert convtest )
ADD_TEST( DICOM_vector3d vectortest )
ADD_TEST( DICOM_reexport testexported )

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/zeroAlpha.frag" "${CMAKE_CURRENT_SOURCE_DIR}/zeroAlpha.frag")

endif (UNIX AND NOT APPLE)
